cmake_minimum_required(VERSION 3.31)
project(hot100)

set(CMAKE_CXX_STANDARD 20)

add_executable(hot100 merge_intervals.cpp)
add_executable(maximum_subarray_sum maximum_subarray_sum.cpp)
add_executable(rotate_array rotate_array.cpp)
add_executable(productExceptSelf productExceptSelf.cpp)
add_executable(Subarray_Sum_Equals_K Subarray_Sum_Equals_K.cpp)
add_executable(maxSlidingWindow maxSlidingWindow.cpp)
add_executable(Minimum_Window_Substring Minimum_Window_Substring.cpp)