cmake_minimum_required(VERSION 3.31)
project(hot100)

set(CMAKE_CXX_STANDARD 20)

add_executable(hot100 NormalArray/merge_intervals.cpp)
add_executable(maximum_subarray_sum NormalArray/maximum_subarray_sum.cpp)
add_executable(rotate_array NormalArray/rotate_array.cpp)
add_executable(productExceptSelf NormalArray/productExceptSelf.cpp)
add_executable(Subarray_Sum_Equals_K SubString/Subarray_Sum_Equals_K.cpp)
add_executable(maxSlidingWindow SubString/maxSlidingWindow.cpp)
add_executable(Minimum_Window_Substring SubString/Minimum_Window_Substring.cpp)
add_executable(lengthOfLongestSubstring SlidingWindow/lengthOfLongestSubstring.cpp)
add_executable(findAnagrams SlidingWindow/findAnagrams.cpp)
add_executable(maxArea TwoPointers/maxArea.cpp)
add_executable(threeSum TwoPointers/threeSum.cpp)
add_executable(trap TwoPointers/trap.cpp)
add_executable(twoSum Hash/twoSum.cpp)
add_executable(groupAnagrams Hash/groupAnagrams.cpp)
add_executable(longestConsecutive Hash/longestConsecutive.cpp)
add_executable(setZeroes Matrix/setZeroes.cpp)
add_executable(searchMatrix Matrix/searchMatrix.cpp)
add_executable(numIslands Graph/numIslands.cpp)